<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="error_conection">网络连接错误</string>

    <!--主页面-->
    <string name="main_map">周边</string>
    <string name="main_match">活动</string>
    <string name="main_message">消息</string>
    <string name="main_me">我的</string>

    <string name="login">登录</string>
    <string name="forgetpassword">忘记密码?</string>
    <string name="thirdregister">第三方注册</string>
    <string name="weixinregister">微信帐号注册</string>
    <string name="weiboregister">微博帐号注册</string>
    <string name="inputphone">请输入您的手机号码</string>
    <string name="inputpassword">请输入您的密码</string>
    <string name="inputvalidation">请输入验证码</string>
    <string name="phonevalidation">手机验证(1/2)</string>
    <string name="getvalidation">获取验证码</string>
    <string name="nextstep">下一步</string>
    <string name="second">秒</string>
    <string name="setpassword">设置密码(2/2)</string>
    <string name="resetpassword">重置密码(2/2)</string>
    <string name="finish">完成</string>
    <string name="friend">伙伴</string>
    <string name="coach">教练</string>
    <string name="venues">场馆</string>
    <string name="havealook">随便看看</string>
    <string name="loginquick">立即登录</string>
    <string name="weibologin">微博帐号登录</string>
    <string name="wxlogin">微信帐号登录</string>
    <string name="pleaselogin">请登录</string>
    <string name="launcher">发起</string>
    <string name="launcherquick">立即发起</string>
    <string name="predeterminequick">立即预定</string>
    <string name="launchermatch">发起活动</string>
    <string name="matchinfo">活动详情</string>
    <string name="lanucher_theme">请写下您的活动主题</string>
    <string name="lanucher_count">请填写参加活动的人数</string>
    <string name="match_place">活动地点</string>
    <string name="address">请输入您将要活动的地址</string>
    <string name="rewardcoin">奖励果冻</string>
    <string name="extracoin">当前果冻剩余:</string>
    <string name="coinnumber">奖励果冻数量:</string>
    <string name="coininfo">关于果冻?</string>
    <string name="friends">好友</string>
    <string name="link">联系TA</string>
    <string name="comerecent">最近来过</string>
    <string name="place">地址</string>
    <string name="time">时间</string>
    <string name="sign">签到</string>
    <string name="service">服务</string>
    <string name="venuescomment">场馆评价</string>
    <string name="addsign">添加签到</string>
    <string name="venuessign">场馆签到</string>
    <string name="addsure">确认添加</string>
    <string name="addcomment">添加评价</string>
    <string name="allpoint">总评分</string>
    <string name="coachcomment">教练评价</string>
    <string name="bookingtime">预定时段</string>
    <string name="starttime">开始时间</string>
    <string name="endtime">结束时间</string>
    <string name="matchtype">项目类型</string>
    <string name="tablelevel">球桌等级</string>
    <string name="bookingnumber">预定数量</string>
    <string name="bindphone">绑定新手机号码</string>
    <string name="submitorder">提交订单</string>
    <string name="chinesetableball">中式八球</string>
    <string name="americantableball">美式九球</string>
    <string name="snooker">斯诺克</string>
    <string name="normal">普通</string>
    <string name="higher">高级</string>
    <string name="best">总统</string>
    <string name="booknumber">预定数量</string>
    <string name="pay">支付</string>
    <string name="address_one">地址:</string>
    <string name="starttime_one">开始时间:</string>
    <string name="endtime_one">结束时间:</string>
    <string name="type_one">项目类型:</string>
    <string name="level_one">桌球等级:</string>
    <string name="pay_one">预定数量:</string>
    <string name="price_one">单价:</string>
    <string name="price_all">总金额:</string>
    <string name="payonline">在线支付</string>
    <string name="payzhifubao">支付宝支付</string>
    <string name="paysure">确认支付</string>
    <string name="timenotcome">未过期</string>
    <string name="paycome">已付款</string>
    <string name="paynotcome">未付款</string>
    <string name="myorder">我的订单</string>
    <string name="mysport">我的活动</string>
    <string name="verificationcode">验证码:</string>
    <string name="please_one">请场馆人员验证验证码或二维码即可使用</string>
    <string name="orderinfo">订单详情</string>
    <string name="mylanucher">我发起</string>
    <string name="myattend">我参与</string>
    <string name="mysign">我的签到</string>
    <string name="blackmenu">黑名单</string>
    <string name="release">解除</string>
    <string name="mycollection">我的收藏</string>
    <string name="addfriend">添加好友</string>
    <string name="pleasetwo">请输入您要添加的约你动号码</string>
    <string name="chooselabel">选择标签</string>
    <string name="beizhu">备注</string>
    <string name="notice">通知</string>
    <string name="updatenickname">修改昵称</string>
    <string name="updatesex">修改性别</string>
    <string name="updatephone">修改电话</string>
    <string name="updatesign">修改宣言</string>
    <string name="commentceo">吐槽CEO</string>
    <string name="checkversion">检查版本</string>
    <string name="logout">登出</string>
    <string name="error_phone_number">手机号码不正确!</string>
    <string name="cancle">取消</string>
    <string name="ok">确定</string>
    <!--授权-->
    <string name="error_loading_login">授权失败</string>
    <string name="success_loading_login">授权成功</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>

    <!-- 自定义组件 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>

    <!-- 消除警告，可忽略 -->
    <string name="d">图片描述</string>

    <!--亲加-->
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="title_activity_chat_page">ChatPage</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Hello world!</string>


</resources>