<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="0dp" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/text_line"
            android:gravity="center_vertical"
            android:hint="@string/inputphone"
            android:inputType="phone"
            android:maxLength="11"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/iv_phone"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="6dp"
            android:src="@drawable/ic_telephone" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/text_line"
            android:hint="@string/inputpassword"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/iv_password"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="6dp"
            android:src="@drawable/ic_password" />

        <ImageView
            android:id="@+id/iv_showpassword"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_showpassword" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/forgetpassword"
        android:textColor="@color/green"
        android:textSize="@dimen/small_text" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_select"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/thirdregister"
        android:textColor="@color/grayblack"
        android:textSize="@dimen/small_text" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="13dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <Button
                android:id="@+id/btn_weixin"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/button_weixin" />

            <Button
                android:id="@+id/btn_weibo"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_weixin" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:src="@drawable/ic_wechat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/weixinregister"
                    android:textColor="@color/black"
                    android:textSize="17dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:src="@drawable/ic_weibo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/weiboregister"
                    android:textColor="@color/black"
                    android:textSize="17dp" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
