<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout">

    <RelativeLayout
        android:id="@+id/rl_one"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/extracoin"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tv_coin_count_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:text="9999"
            android:textColor="@color/black"
            android:textSize="16dp" />

    </RelativeLayout>

    <View
        android:id="@+id/view_one"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/rl_one"
        android:background="@color/grayblack"></View>

    <RelativeLayout
        android:id="@+id/rl_two"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_below="@id/view_one"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/coinnumber"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/iv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_add" />

        <TextView
            android:id="@+id/tv_coin_count"
            android:layout_width="38dp"
            android:layout_height="31dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="11dp"
            android:layout_toLeftOf="@id/iv_add"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <View
            android:layout_width="38dp"
            android:layout_height="0.5dp"
            android:layout_alignLeft="@id/tv_coin_count"
            android:layout_below="@id/tv_coin_count"
            android:background="@color/grayblack"></View>

        <ImageView
            android:id="@+id/iv_reduce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="11dp"
            android:layout_toLeftOf="@id/tv_coin_count"
            android:src="@drawable/ic_reduce" />
    </RelativeLayout>
    <TextView
        android:layout_below="@id/rl_two"
        android:id="@+id/tv_coininfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        android:text="@string/coininfo"
        android:textSize="16dp"
        android:layout_marginTop="8dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        />
    <Button
        android:id="@+id/btn_launcher"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_below="@id/rl_two"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="79dp"
        android:background="@drawable/button_nextstep"
        android:text="@string/launcherquick"
        android:textColor="@color/white" />

</RelativeLayout>
